--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -7,7 +7,7 @@
     <script src='jsPsych/plugins/jspsych-html-keyboard-response.js'></script>
     <script src='jsPsych/plugins/jspsych-survey-likert.js'></script>
     <script src='jsPsych/plugins/jspsych-call-function.js'></script>
-    <script src='dir.php'></script>
+    <script src='views/dir.php'></script>
     <link href='jsPsych/css/jspsych.css' rel='stylesheet' type='text/css'></link>
     <link href='css/experiment.css' rel='stylesheet' type='text/css'></link>
     <link rel='icon' type='image/png' href='/img/favicon.png' />
