--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -7,7 +7,6 @@
     <script src='jsPsych/plugins/jspsych-html-keyboard-response.js'></script>
     <script src='jsPsych/plugins/jspsych-survey-likert.js'></script>
     <script src='jsPsych/plugins/jspsych-call-function.js'></script>
-    <script src='views/dir.php'></script>
     <link href='jsPsych/css/jspsych.css' rel='stylesheet' type='text/css'></link>
     <link href='css/experiment.css' rel='stylesheet' type='text/css'></link>
     <link rel='icon' type='image/png' href='/img/favicon.png' />
@@ -15,6 +14,14 @@
   <body>
   </body>
   <script>
+
+  <?php
+  var files = <?php $out = array();
+  foreach (glob('img/stimuli/*.jpg') as $filename) {
+      $p = pathinfo($filename);
+      $out[] = $p['filename'];
+  }
+  echo json_encode($out); ?>;
 
 
   /**
@@ -93,7 +100,7 @@
   // var image_files = fs.readdirSync(video_prefix);
   // image_files = shuffle(image_files);
 
-  var image_files = files[];
+  var image_files = files;
 
   console.log(finish_code);
   console.log(image_files);
