--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -94,7 +94,7 @@
     /* define instructions block */
   var instructions_block = {
     type: 'html-keyboard-response',
-    stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer a few quetsions. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to start the first video.</p>',
+    stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer a few quetsions. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
     choices: ['C'],
   };
 
@@ -103,7 +103,7 @@
       image_name = image_prefix + image_ids[i] + '.jps';
       test_stimuli_1.push(
       {
-        sources: [image_name],
+        preamble: '<img src=\'' + image_name + '\'>',
         on_finish: function(data){
           jsPsych.data.addDataToLastTrial({worker_code: finish_code});
         }
@@ -125,10 +125,9 @@
     timeline: test_stimuli_1,
     questions: [
       {prompt: "I like vegetables.", labels: scale_1}
-    ],
-    preamble: '<img src=\'' + test_stimuli_1[0] + '\'>'
+    ]
   };
-  
+
   var save_data_block = {
     type: 'call-function',
     func:  function() {
@@ -151,7 +150,7 @@
   /* create experiment timeline array */
   var timeline = [];
   timeline.push(instructions_block);
-  timeline.push(image_block_1);
+  timeline.push(test_stimuli_1);
   timeline.push(save_data_block);
 
   /* MTurk information */
