--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -103,7 +103,7 @@
       image_name = image_prefix + image_ids[i] + '.jps';
       test_stimuli_1.push(
       {
-        preamble: '<img src=\'' + image_name + '\'>',
+        preamble: '<img src=\'image_' + image_name + '\'>',
         on_finish: function(data){
           jsPsych.data.addDataToLastTrial({worker_code: finish_code});
         }
