--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -150,7 +150,7 @@
   /* create experiment timeline array */
   var timeline = [];
   timeline.push(instructions_block);
-  timeline.push(test_stimuli_1);
+  timeline.push(image_block_1);
   timeline.push(save_data_block);
 
   /* MTurk information */
