--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -100,7 +100,7 @@
 
   /* dynamically build a list of images for block 1 */
   for (var i = 0; i <= images_participant; i++) {
-      image_name = image_prefix + image_ids[i] + '.jpg';
+      image_name = image_prefix + 'image_' + image_ids[i] + '.jpg';
       test_stimuli_1.push(
       {
         preamble: '<img src=\'' + image_name + '\'>',
