--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -115,7 +115,7 @@
     "Disagree strongly", 
     "Disagree a little", 
     "Neither agree nor disagree", 
-    "Neither agree nor disagree", 
+    "Agree a little", 
     "Agree strongly"
   ];
 
