5 images per person

--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -99,7 +99,7 @@
   };
 
   /* dynamically build a list of images for block 1 */
-  for (var i = 0; i <= images_participant; i++) {
+  for (var i = 0; i < images_participant; i++) {
       image_name = image_prefix + 'image_' + image_ids[i] + '.jpg';
       test_stimuli_1.push(
       {
