--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -126,9 +126,9 @@
     type: 'survey-likert',
     timeline: test_stimuli_1,
     questions: [
-      {prompt: "I like vegetables.", labels: scale_1},
-      {prompt: "I like fruit.", labels: scale_1},
-      {prompt: "Crowdsourcing is a way to go.", labels: scale_1}
+      {prompt: "I like vegetables.", labels: scale_1, required: true},
+      {prompt: "I like fruit.", labels: scale_1, required: true},
+      {prompt: "Crowdsourcing is a way to go.", labels: scale_1, required: true}
     ]
   };
 
