--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -106,7 +106,7 @@
         preamble: '<img src=\'' + image_name + '\'>',
         on_finish: function(data){
           jsPsych.data.addDataToLastTrial({worker_code: finish_code});
-          jsPsych.data.addDataToLastTrial({worker_code: finish_code});
+          jsPsych.data.addDataToLastTrial({image_id: image_ids[i]});
         }
       }
     );
