--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -96,6 +96,10 @@
     type: 'html-keyboard-response',
     stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer a few quetsions. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
     choices: ['C'],
+    on_finish: function(data){
+      jsPsych.data.addDataToLastTrial({worker_code: finish_code});
+      jsPsych.data.addDataToLastTrial({image_id: image_ids[i]});
+    }
   };
 
   /* dynamically build a list of images for block 1 */
@@ -103,11 +107,7 @@
       image_name = image_prefix + 'image_' + image_ids[i] + '.jpg';
       test_stimuli_1.push(
       {
-        preamble: '<img src=\'' + image_name + '\'>',
-        on_finish: function(data){
-          jsPsych.data.addDataToLastTrial({worker_code: finish_code});
-          jsPsych.data.addDataToLastTrial({image_id: image_ids[i]});
-        }
+        preamble: '<img src=\'' + image_name + '\'>'
       }
     );
   }
