--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -87,8 +87,7 @@
       image_ids.push(i);
   }
   image_ids = shuffle(image_ids);
-  image_ids_slice = image_ids.slice(1, images_participant + 1);
-
+  var = image_ids_slice = image_ids.slice(1, images_participant + 1);
 
   console.log(finish_code);
   console.log(image_ids);
