New questions and scale

--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -143,9 +143,9 @@
     type: 'survey-likert',
     timeline: test_stimuli_1,
     questions: [
-      {prompt: "I like vegetables.", labels: scale_2, required: true},
-      {prompt: "I like fruit.", labels: scale_2, required: true},
-      {prompt: "Crowdsourcing is a way to go.", labels: scale_2, required: true}
+      {prompt: "As a pedestrian, how intuitive is the color on the bumper of the car as a representation of the message 'Please cross the road'?", labels: scale_2, required: true},
+      {prompt: "How much do you like the color on the bumper?", labels: scale_2, required: true},
+      {prompt: "How intuitive is the color on the bumper?", labels: scale_2, required: true}
     ]
   };
 
