Clear in prompt

--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -153,7 +153,7 @@
     type: 'image-slider-response',
     timeline: test_stimuli_1,
     labels: ['0', '100'],
-    prompt: "<p>As a pedestrian, how intuitive is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
+    prompt: "<p>As a pedestrian, how clear is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
     require_movement: true
   };
 
