--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -154,7 +154,8 @@
     timeline: test_stimuli_1,
     labels: ['0', '100'],
     prompt: "<p>As a pedestrian, how clear is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
-    require_movement: true
+    require_movement: true,
+    response_ends_trial: true
   };
 
   var save_data_block = {
