--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -97,7 +97,7 @@
     /* define instructions block */
   var instructions_block = {
     type: 'html-keyboard-response',
-    stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer a few quetsions. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
+    stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer a few questions. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
     choices: ['C'],
     on_finish: function(data){
       jsPsych.data.addDataToLastTrial({worker_code: finish_code});
@@ -154,7 +154,7 @@
     timeline: test_stimuli_1,
     labels: ['0', '100'],
     prompt: "<p>As a pedestrian, how clear is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
-    require_movement: true,
+    // require_movement: true,
     response_ends_trial: true
   };
 
