--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -111,7 +111,9 @@
       test_stimuli_1.push(
       {
         // preamble: '<img src=\'' + image_name + '\'>'
-        stimulus: image_name
+        stimulus: image_name,
+        require_movement: true,
+        response_ends_trial: true
       }
     );
   }
@@ -155,7 +157,7 @@
     labels: ['0', '100'],
     prompt: "<p>As a pedestrian, how clear is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
     // require_movement: true,
-    response_ends_trial: true
+    // response_ends_trial: true
   };
 
   var save_data_block = {
