--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -112,7 +112,7 @@
       {
         // preamble: '<img src=\'' + image_name + '\'>'
         stimulus: image_name,
-        require_movement: true,
+        // require_movement: true,
         response_ends_trial: true
       }
     );
