--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -152,7 +152,7 @@
   var image_block_slider = {
     type: 'image-slider-response',
     timeline: test_stimuli_1,
-    labels: ['0', '20', '40', '60', '80', '100'],
+    labels: ['Not intuitive at all', 'Completely intuitive'],
     prompt: "<p>As a pedestrian, how clear is the color on the bumper as a representation of the message 'Please cross the road'?</p>",
     require_movement: true
     // response_ends_trial: true
