--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -153,6 +153,7 @@
     type: 'image-slider-response',
     timeline: test_stimuli_1,
     labels: ['0', '20', '40', '60', '80', '100'],
+    slider_width: 700,
     // labels: ['Not intuitive at all', 'Completely intuitive'],
     prompt: "<p>Imagine that you are a pedestrian and the car wants to let you go first. Would you agree with the following statement: <strong>The color on the bumper is intuitive as a message \'Please cross the road\'</strong>? (0 = completely disagree, 100 = completely agree)</p>",
     require_movement: true
