--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -97,7 +97,7 @@
     /* define instructions block */
   var instructions_block = {
     type: 'html-keyboard-response',
-    stimulus: '<p>The purpose of this experiment is to determine your willingness to cross in front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer one question by moving a slider. To advance to the next image, the slider needs to be moved. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
+    stimulus: '<p>The purpose of this experiment is to determine the intuitiveness of various light colors presented on the front of an automated vehicle. In the following images, you will see an automated vehicle that stopped in front of you after approaching you.</p><p>You will view 100 images. Each image will be on a separate page. For each image you will need to answer one question by moving a slider. To advance to the next image, the slider needs to be moved. The window of your browser should be at least 1300px wide and 800px tall. Press \'C\' to proceed to the first image.</p>',
     choices: ['C'],
     on_finish: function(data){
       jsPsych.data.addDataToLastTrial({worker_code: finish_code});
@@ -155,7 +155,7 @@
     labels: ['0', '20', '40', '60', '80', '100'],
     slider_width: 1000,
     // labels: ['Not intuitive at all', 'Completely intuitive'],
-    prompt: "<p style='width: 1000px'>Imagine that you are a pedestrian and the car wants to let you go first. Please rate the following statement: <strong>The color on the bumper is intuitive as a message \'Please cross the road\'</strong> (0 = completely disagree, 100 = completely agree).</p>",
+    prompt: "<p style='width: 1000px'>Imagine that you are a pedestrian and the car wants to let you go first. Please rate the following statement: <strong>The color on the bumper is intuitive for signaling \'Please cross the road\'</strong> (0 = completely disagree, 100 = completely agree).</p>",
     require_movement: true
     // response_ends_trial: true
   };
