--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -198,6 +198,7 @@
   jsPsych.init({
     show_preload_progress_bar: true,
     timeline: timeline,
+    show_progress_bar: true,
     max_load_time: 3000000,
     on_finish: function() {
       window.location.href = 'finish?work=' + finish_code;
