--- a/public/views/experiment.html
+++ b/public/views/experiment.html
@@ -90,9 +90,9 @@
   image_ids = shuffle(image_ids);
   var image_ids_slice = image_ids.slice(0, images_participant);
 
-  console.log(finish_code);
-  console.log(image_ids);
-  console.log(image_ids_slice);
+  // console.log(finish_code);
+  // console.log(image_ids);
+  // console.log(image_ids_slice);
 
     /* define instructions block */
   var instructions_block = {
@@ -116,7 +116,7 @@
     );
   }
 
-  console.log(test_stimuli_1);
+  // console.log(test_stimuli_1);
 
   var scale_1 = [
     "Disagree strongly", 
@@ -161,7 +161,6 @@
     on_finish: function(){
         var progress_value = jsPsych.getProgressBarCompleted() + 1/images_participant;
         jsPsych.setProgressBar(progress_value); // set progress bar to 85% full.
-        console.log(progress_value);
     }
   };
 
